[gd_scene load_steps=24 format=2]

[ext_resource path="res://Game.gd" type="Script" id=1]
[ext_resource path="res://Room.tscn" type="PackedScene" id=2]
[ext_resource path="res://floor.png" type="Texture" id=3]
[ext_resource path="res://Door.tscn" type="PackedScene" id=4]
[ext_resource path="res://door-hack-label.png" type="Texture" id=5]
[ext_resource path="res://door-gradient-blue.png" type="Texture" id=6]
[ext_resource path="res://door-gradient-yellow.png" type="Texture" id=7]
[ext_resource path="res://EnemyRoom.gd" type="Script" id=8]
[ext_resource path="res://Enemy.tscn" type="PackedScene" id=9]
[ext_resource path="res://OrbRoom.gd" type="Script" id=10]
[ext_resource path="res://Orb.tscn" type="PackedScene" id=11]
[ext_resource path="res://Health.tscn" type="PackedScene" id=12]
[ext_resource path="res://TopRoom.gd" type="Script" id=13]
[ext_resource path="res://HackRoom.gd" type="Script" id=14]
[ext_resource path="res://Panel.tscn" type="PackedScene" id=15]
[ext_resource path="res://player.gd" type="Script" id=16]
[ext_resource path="res://player.png" type="Texture" id=17]
[ext_resource path="res://Door.ogg" type="AudioStream" id=18]
[ext_resource path="res://Hit_Hurt.ogg" type="AudioStream" id=19]
[ext_resource path="res://music.ogg" type="AudioStream" id=20]
[ext_resource path="res://Pickup.ogg" type="AudioStream" id=21]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 12.5828, 10 )

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 10, 10 )

[node name="Container" type="Node2D" index="0"]

script = ExtResource( 1 )

[node name="MainRoom" parent="." index="0" instance=ExtResource( 2 )]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 0.0
margin_right = 640.0
margin_bottom = 480.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
mouse_default_cursor_shape = 0
_sections_unfolded = [ "Rect" ]

[node name="Floor" type="Sprite" parent="MainRoom" index="4"]

position = Vector2( 320.785, 240.393 )
texture = ExtResource( 3 )

[node name="RightDoor" parent="MainRoom" index="5" instance=ExtResource( 4 )]

position = Vector2( 617.438, 240 )
rotation = 3.14159
_sections_unfolded = [ "Transform" ]
exit_pos = Vector2( 720, 240 )
exit_room = NodePath("../../EnemyKeyRoom")

[node name="BottomDoor" parent="MainRoom" index="6" instance=ExtResource( 4 )]

position = Vector2( 320.551, 455 )
rotation = -1.5708
_sections_unfolded = [ "Transform" ]
locked = true
exit_pos = Vector2( 320, 560 )
required_key_card = "blue"
exit_room = NodePath("../../BottomRoom")

[node name="TopDoor" parent="MainRoom" index="7" instance=ExtResource( 4 )]

position = Vector2( 320, 25 )
rotation = 1.5708
_sections_unfolded = [ "Transform" ]
locked = true
exit_pos = Vector2( 320, -80 )
required_key_card = "yellow"
exit_room = NodePath("../../TopRoom")

[node name="LeftDoor" parent="MainRoom" index="8" instance=ExtResource( 4 )]

position = Vector2( 24.0211, 240 )
locked = true
hackable = true
exit_pos = Vector2( -105, 240 )
exit_room = NodePath("../../HackRoom")

[node name="HackDoorLabel" type="Sprite" parent="MainRoom" index="9"]

position = Vector2( 75, 240 )
texture = ExtResource( 5 )

[node name="BlueDoorLabel" type="Sprite" parent="MainRoom" index="10"]

position = Vector2( 320, 405 )
texture = ExtResource( 6 )

[node name="YellowDoorLabel" type="Sprite" parent="MainRoom" index="11"]

position = Vector2( 320, 75 )
texture = ExtResource( 7 )

[node name="EnemyKeyRoom" parent="." index="1" instance=ExtResource( 2 )]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 640.0
margin_top = 0.0
margin_right = 1280.0
margin_bottom = 480.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
mouse_default_cursor_shape = 0
script = ExtResource( 8 )
_sections_unfolded = [ "Rect" ]
room_id = 1

[node name="Floor" type="Sprite" parent="EnemyKeyRoom" index="4"]

position = Vector2( 320, 240 )
texture = ExtResource( 3 )

[node name="LeftDoor" parent="EnemyKeyRoom" index="5" instance=ExtResource( 4 )]

position = Vector2( 25, 240 )
exit_pos = Vector2( 560, 240 )
exit_room = NodePath("../../MainRoom")

[node name="EnemyBody" parent="EnemyKeyRoom" index="6" instance=ExtResource( 9 )]

position = Vector2( 150, 110 )
enemy_room = 1

[node name="EnemyBody1" parent="EnemyKeyRoom" index="7" instance=ExtResource( 9 )]

position = Vector2( 460, 110.008 )
enemy_room = 1

[node name="EnemyBody2" parent="EnemyKeyRoom" index="8" instance=ExtResource( 9 )]

position = Vector2( 460, 380 )
enemy_room = 1

[node name="EnemyBody3" parent="EnemyKeyRoom" index="9" instance=ExtResource( 9 )]

position = Vector2( 150, 380 )
enemy_room = 1

[node name="BottomRoom" parent="." index="2" instance=ExtResource( 2 )]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 480.0
margin_right = 640.0
margin_bottom = 960.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
mouse_default_cursor_shape = 0
script = ExtResource( 10 )
room_id = 2

[node name="Floor" type="Sprite" parent="BottomRoom" index="4"]

position = Vector2( 320, 240 )
texture = ExtResource( 3 )

[node name="TopDoor" parent="BottomRoom" index="5" instance=ExtResource( 4 )]

position = Vector2( 320, 25 )
rotation = 1.5708
_sections_unfolded = [ "Transform" ]
exit_pos = Vector2( 320, 400 )
exit_room = NodePath("../../MainRoom")

[node name="Orb1" parent="BottomRoom" index="6" instance=ExtResource( 11 )]

position = Vector2( 259, 130 )

[node name="Orb2" parent="BottomRoom" index="7" instance=ExtResource( 11 )]

position = Vector2( 366, 234 )

[node name="Orb3" parent="BottomRoom" index="8" instance=ExtResource( 11 )]

position = Vector2( 259, 346 )

[node name="Camera2D" type="Camera2D" parent="." index="3"]

position = Vector2( 320, 240 )
anchor_mode = 1
rotating = false
current = false
zoom = Vector2( 1, 1 )
limit_left = -10000000
limit_top = -10000000
limit_right = 10000000
limit_bottom = 10000000
limit_smoothed = false
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = false
smoothing_speed = 5.0
offset_v = 0.0
offset_h = 0.0
drag_margin_left = 0.2
drag_margin_top = 0.2
drag_margin_right = 0.2
drag_margin_bottom = 0.2
editor_draw_screen = true
editor_draw_limits = false
editor_draw_drag_margin = false
_sections_unfolded = [ "Transform", "Z Index" ]

[node name="CanvasLayer" type="CanvasLayer" parent="Camera2D" index="0"]

editor/display_folded = true
layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )

[node name="Health" parent="Camera2D/CanvasLayer" index="0" instance=ExtResource( 12 )]

position = Vector2( 500, 25 )

[node name="Health1" parent="Camera2D/CanvasLayer" index="1" instance=ExtResource( 12 )]

position = Vector2( 520, 25 )

[node name="Health2" parent="Camera2D/CanvasLayer" index="2" instance=ExtResource( 12 )]

position = Vector2( 540, 25 )

[node name="TopRoom" parent="." index="4" instance=ExtResource( 2 )]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = -480.0
margin_right = 640.0
margin_bottom = 0.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
mouse_default_cursor_shape = 0
script = ExtResource( 13 )
room_id = 3

[node name="Floor" type="Sprite" parent="TopRoom" index="4"]

position = Vector2( 320, 240 )
texture = ExtResource( 3 )

[node name="BottomDoor" parent="TopRoom" index="5" instance=ExtResource( 4 )]

position = Vector2( 320, 455 )
rotation = 4.71239
_sections_unfolded = [ "Transform" ]
exit_pos = Vector2( 320, 90 )
exit_room = NodePath("../../MainRoom")

[node name="EnemyBody" parent="TopRoom" index="6" instance=ExtResource( 9 )]

position = Vector2( 85, 140 )

[node name="EnemyBody1" parent="TopRoom" index="7" instance=ExtResource( 9 )]

position = Vector2( 160, 140 )

[node name="EnemyBody2" parent="TopRoom" index="8" instance=ExtResource( 9 )]

position = Vector2( 235, 140 )

[node name="EnemyBody3" parent="TopRoom" index="9" instance=ExtResource( 9 )]

position = Vector2( 310, 140 )

[node name="EnemyBody4" parent="TopRoom" index="10" instance=ExtResource( 9 )]

position = Vector2( 385, 140 )

[node name="EnemyBody5" parent="TopRoom" index="11" instance=ExtResource( 9 )]

position = Vector2( 460, 140 )

[node name="EnemyBody6" parent="TopRoom" index="12" instance=ExtResource( 9 )]

position = Vector2( 535, 140 )

[node name="HackRoom" parent="." index="5" instance=ExtResource( 2 )]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -640.0
margin_top = 0.0
margin_right = 0.0
margin_bottom = 480.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
mouse_default_cursor_shape = 0
script = ExtResource( 14 )
room_id = 4

[node name="Floor" type="Sprite" parent="HackRoom" index="4"]

position = Vector2( 320, 240 )
texture = ExtResource( 3 )

[node name="RightDoor" parent="HackRoom" index="5" instance=ExtResource( 4 )]

position = Vector2( 615, 240 )
rotation = 3.14159
_sections_unfolded = [ "Transform" ]
exit_pos = Vector2( 80, 240 )
exit_room = NodePath("../../MainRoom")

[node name="EnemyBody" parent="HackRoom" index="6" instance=ExtResource( 9 )]

position = Vector2( 151, 128 )
shielded = true

[node name="EnemyBody1" parent="HackRoom" index="7" instance=ExtResource( 9 )]

position = Vector2( 490, 128 )
shielded = true

[node name="Panel" parent="HackRoom" index="8" instance=ExtResource( 15 )]

position = Vector2( 320, 355 )

[node name="PlayerBody" type="KinematicBody2D" parent="." index="6"]

editor/display_folded = true
position = Vector2( 320, 240 )
input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 16 )
CENTER_ROOM = 0
KEY_ROOM = 1
ORB_ROOM = 2
TOP_ROOM = 3

[node name="Sprite" type="Sprite" parent="PlayerBody" index="0"]

texture = ExtResource( 17 )

[node name="Area2D" type="Area2D" parent="PlayerBody" index="1"]

position = Vector2( -0.494381, -3.06664 )
scale = Vector2( 0.690617, 0.799965 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerBody/Area2D" index="0"]

position = Vector2( 0, -2.14577e-05 )
scale = Vector2( 2.51798, 3.07958 )
shape = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerBody" index="2"]

position = Vector2( -0.190427, -2.40106 )
scale = Vector2( 2.02829, 2.25636 )
shape = SubResource( 2 )

[node name="DoorSound" type="AudioStreamPlayer2D" parent="." index="7"]

position = Vector2( 320, 240 )
stream = ExtResource( 18 )
volume_db = 0.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1
_sections_unfolded = [ "Pause" ]

[node name="HitHurtSound" type="AudioStreamPlayer2D" parent="." index="8"]

position = Vector2( 320, 240 )
stream = ExtResource( 19 )
volume_db = 0.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1

[node name="StreamPlayer" type="AudioStreamPlayer" parent="." index="9"]

stream = ExtResource( 20 )
volume_db = 0.0
autoplay = true
mix_target = 0
bus = "Master"

[node name="PickupSound" type="AudioStreamPlayer2D" parent="." index="10"]

stream = ExtResource( 21 )
volume_db = 0.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1


